--- a/src/com/github/view/stage2.fxml
+++ b/src/com/github/view/stage2.fxml
@@ -5,14 +5,13 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.112-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Stage2Controller">
+<GridPane stylesheets="@style.css" alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.112-ea"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Stage2Controller">
    <columnConstraints>
-      <ColumnConstraints />
+      <ColumnConstraints/>
    </columnConstraints>
    <rowConstraints>
-      <RowConstraints />
+      <RowConstraints/>
    </rowConstraints>
-   <children>
-      <Canvas fx:id="ctx_1" height="960.0" width="1120.0" />
-   </children>
+   <Canvas fx:id="ctx_1" height="960.0" width="1120.0"/>
 </GridPane>
