--- a/src/com/github/view/taxiInterface.fxml
+++ b/src/com/github/view/taxiInterface.fxml
@@ -4,10 +4,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiInterface_Controller">
-   <children>
-      <Button layoutX="46.0" layoutY="75.0" mnemonicParsing="false" text="Sign up" />
-      <Button layoutX="46.0" layoutY="113.0" mnemonicParsing="false" text="Sign in" />
-      <Button layoutX="46.0" layoutY="164.0" mnemonicParsing="false" text="Sign out" />
-   </children>
+<AnchorPane stylesheets="@style.css" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.TaxiInterfaceController">
+   <Button layoutX="46.0" layoutY="75.0" mnemonicParsing="false" text="Sign up"/>
+   <Button layoutX="46.0" layoutY="113.0" mnemonicParsing="false" text="Sign in"/>
+   <Button layoutX="46.0" layoutY="164.0" mnemonicParsing="false" text="Sign out"/>
 </AnchorPane>
