--- a/src/com/github/view/login.fxml
+++ b/src/com/github/view/login.fxml
@@ -1,11 +1,55 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane fx:controller="com.github.controller.LoginController" stylesheets="@login.css" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
-   <Pane id="login" prefHeight="400.0" prefWidth="300.0"/>
-   <Pane id="registration" layoutX="300.0" prefHeight="400.0" prefWidth="300.0"/>
+<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="350.0" stylesheets="@login.css" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.LoginController">
+   <Pane id="loginPane" fx:id="loginPane" layoutX="7.0" layoutY="6.0" prefHeight="488.0" prefWidth="336.0">
+      <Button id="exitLoginButton" fx:id="exitLoginButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitButton" prefHeight="24.0" prefWidth="24.0" />
+      <VBox layoutX="59.0" layoutY="59.0" prefHeight="323.0" prefWidth="219.0" spacing="10.0">
+         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="219.0">
+            <Label id="loginLabel" text="Jala Jala" />
+         </HBox>
+         <TextField id="usernameField" prefHeight="40.0" prefWidth="219.0" promptText="Username" />
+         <PasswordField id="passwordField" prefHeight="40.0" prefWidth="219.0" promptText="Password" />
+         <VBox spacing="10.0">
+            <HBox alignment="CENTER">
+               <Button id="loginButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="219.0" text="LOGIN" />
+            </HBox>
+            <HBox alignment="CENTER">
+               <VBox>
+                  <Button id="newUserButton" mnemonicParsing="false" onAction="#handleNewUserButton" prefHeight="21.0" prefWidth="99.0" text="New user?" />
+                  <Button id="forgotPasswordButton" mnemonicParsing="false" prefHeight="21.0" prefWidth="99.0" text="Forgot password?" />
+               </VBox>
+            </HBox>
+         </VBox>
+      </VBox>
+   </Pane>
+   <Pane id="registrationPane" fx:id="registrationPane" layoutX="7.0" layoutY="6.0" prefHeight="488.0" prefWidth="336.0" visible="false">
+      <Button id="exitRegistrationButton" fx:id="exitRegistrationButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitRegistrationButton" prefHeight="24.0" prefWidth="24.0" />
+      <VBox layoutX="59.0" layoutY="41.0" prefHeight="419.0" prefWidth="219.0" spacing="10.0">
+         <HBox alignment="CENTER" prefHeight="54.0" prefWidth="219.0">
+            <Label id="newUserLabel" text="Registration" />
+         </HBox>
+         <TextField promptText="*First Name" />
+         <TextField promptText="*Last Name" />
+         <TextField promptText="*Username" />
+         <TextField promptText="*Email" />
+         <TextField promptText="Phone number" />
+         <TextField promptText="Address" />
+         <TextField promptText="Zip Code" />
+         <TextField promptText="City" />
+         <Button id="signUpButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="225.0" text="SIGN UP" />
+         <HBox alignment="CENTER" centerShape="false">
+            <Label id="specialAccountDetails" alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="219.0" text="If you require an account with special access contact helpdesk" textAlignment="CENTER" wrapText="true">
+            </Label>
+         </HBox>
+      </VBox>
+   </Pane>
 </AnchorPane>
