--- a/src/com/github/view/login.css
+++ b/src/com/github/view/login.css
@@ -8,7 +8,7 @@
     -fx-font-family: 'Ubuntu';
 }
 
-#loginPane, #registrationPane  {
+#loginPane, #registrationPane, #resetPasswordPane  {
     -fx-background-color: #0FA1BA;
     -fx-effect: dropshadow(gaussian, #0FA1BA, 10, 0, 0, 0);
 }
@@ -18,18 +18,18 @@
     -fx-font-size: 32;
     -fx-text-fill: #373738;
 }
-#newUserLabel {
+#newUserLabel, #resetLabel {
     -fx-font-size: 24;
     -fx-text-fill: #373738;
 }
 
-#exitLoginButton, #exitRegistrationButton {
+#exitLoginButton, #exitRegistrationButton, #exitResetButton {
     -fx-background-color: transparent;
     -fx-background-image: url('/resources/icons/close.png');
     -fx-background-size: 24;
 }
 
-#loginButton, #signUpButton {
+#loginButton, #signUpButton, #resetPasswordButton {
     -fx-background-color: #FBB637;
     -fx-text-fill: #373738;
 }
@@ -41,6 +41,10 @@
 #newUserButton, #forgotPasswordButton {
     -fx-font-size: 10;
     -fx-background-color: transparent;
+}
+
+#resetPasswordMsgLabel {
+    -fx-font-size: 10;
 }
 
 #newUserButton:hover, #forgotPasswordButton:hover {
