new user registration update

--- a/src/com/github/view/login.css
+++ b/src/com/github/view/login.css
@@ -34,7 +34,7 @@
     -fx-text-fill: #373738;
 }
 
-#loginButton:hover {
+#loginButton:hover, #signUpButton:hover, #resetPasswordButton:hover {
     -fx-cursor: hand;
 }
 
