--- a/src/com/github/view/login.fxml
+++ b/src/com/github/view/login.fxml
@@ -14,7 +14,7 @@
       <Button id="exitLoginButton" fx:id="exitLoginButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitAppButton" prefHeight="24.0" prefWidth="24.0" />
       <VBox layoutX="59.0" layoutY="59.0" prefHeight="323.0" prefWidth="219.0" spacing="10.0">
          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="219.0">
-            <Label id="loginLabel" text="Jala Jala" />
+            <Label id="loginLabel" text="Jala Trafiken" />
          </HBox>
          <TextField id="usernameField" prefHeight="40.0" prefWidth="219.0" promptText="Username" />
          <PasswordField id="passwordField" prefHeight="40.0" prefWidth="219.0" promptText="Password" />
@@ -33,35 +33,49 @@
    </Pane>
    <Pane id="registrationPane" fx:id="registrationPane" layoutX="7.0" layoutY="6.0" prefHeight="488.0" prefWidth="336.0" visible="false">
       <Button id="exitRegistrationButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitRegistrationButton" prefHeight="24.0" prefWidth="24.0" />
-      <VBox layoutX="59.0" layoutY="41.0" prefHeight="419.0" prefWidth="219.0" spacing="10.0">
+      <VBox layoutX="59.0" layoutY="65.0" prefHeight="374.0" prefWidth="219.0" spacing="10.0">
          <HBox alignment="CENTER" prefHeight="54.0" prefWidth="219.0">
             <Label id="newUserLabel" text="Registration" />
          </HBox>
-         <TextField fx:id="tfFirstName" promptText="*First Name" />
-         <TextField fx:id="tfLastName" promptText="*Last Name" />
-         <TextField fx:id="tfUsernameReg" promptText="*Username" />
-         <TextField fx:id="tfEmailReg" promptText="*Email" />
-         <TextField fx:id="tfPhoneNbr" promptText="Phone number" />
-         <TextField fx:id="tfAddress" promptText="Address" />
-         <TextField fx:id="tfZipCode" promptText="Zip Code" />
-         <TextField fx:id="tfCity" promptText="City" />
-         <Button id="signUpButton" onAction="#handleSignUpButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="225.0" text="SIGN UP" />
+         <TextField fx:id="tfFirstName" prefHeight="40.0" prefWidth="219.0" promptText="*First Name" />
+         <TextField fx:id="tfLastName" prefHeight="40.0" prefWidth="219.0" promptText="*Last Name" />
+         <TextField fx:id="tfUsernameReg" prefHeight="40.0" prefWidth="219.0" promptText="*Username" />
+         <TextField fx:id="tfEmailReg" prefHeight="40.0" prefWidth="219.0" promptText="*Email" />
+         <Button id="nextButton" mnemonicParsing="false" onAction="#handleRegistrationPaneNextButton" prefHeight="40.0" prefWidth="219.0" text="NEXT &gt;" />
          <HBox alignment="CENTER" centerShape="false">
-            <Label fx:id="newUserMsgLabel" id="specialAccountDetails" alignment="CENTER" contentDisplay="CENTER" prefHeight="39.0" prefWidth="219.0" textAlignment="CENTER" wrapText="true">
+            <Label id="specialAccountDetails" fx:id="newUserMsgLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="41.0" prefWidth="219.0" textAlignment="CENTER" wrapText="true">
             </Label>
          </HBox>
       </VBox>
    </Pane>
+    <Pane id="passwordPane" fx:id="passwordPane" layoutX="7.0" layoutY="6.0" prefHeight="488.0" prefWidth="336.0"
+          visible="false">
+        <Button id="exitRegistrationButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false"
+                onAction="#handleExitPasswordPaneButton" prefHeight="24.0" prefWidth="24.0"/>
+        <VBox layoutX="59.0" layoutY="65.0" prefHeight="337.0" prefWidth="219.0" spacing="10.0">
+            <HBox alignment="CENTER" prefHeight="54.0" prefWidth="219.0">
+                <Label id="newUserLabel" text="Choose a password"/>
+            </HBox>
+            <PasswordField prefHeight="40.0" prefWidth="219.0" promptText="*Confirmation Code"/>
+            <PasswordField prefHeight="40.0" prefWidth="219.0" promptText="*Password"/>
+            <PasswordField prefHeight="40.0" prefWidth="219.0" promptText="*Confirm Password"/>
+            <Button id="finishButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="219.0" text="FINISH"/>
+            <HBox alignment="CENTER" centerShape="false">
+                <Label id="specialAccountDetails" alignment="CENTER" contentDisplay="CENTER" prefHeight="41.0"
+                       prefWidth="219.0" textAlignment="CENTER" wrapText="true"/>
+            </HBox>
+        </VBox>
+    </Pane>
    <Pane id="resetPasswordPane" fx:id="resetPasswordPane" layoutX="7.0" layoutY="6.0" prefHeight="488.0" prefWidth="336.0" visible="false">
       <Button id="exitResetButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitResetPasswordButton" prefHeight="24.0" prefWidth="24.0" />
-      <VBox layoutX="59.0" layoutY="59.0" prefHeight="323.0" prefWidth="219.0" spacing="10.0">
-         <HBox alignment="CENTER" prefHeight="100.0" prefWidth="219.0">
+      <VBox layoutX="59.0" layoutY="59.0" prefHeight="374.0" prefWidth="219.0" spacing="10.0">
+         <HBox alignment="CENTER" prefHeight="117.0" prefWidth="219.0">
             <Label id="resetLabel" text="Reset Password" />
          </HBox>
-         <TextField id="usernameField" prefHeight="40.0" prefWidth="219.0" promptText="Email address" />
+         <TextField id="usernameField" prefHeight="40.0" prefWidth="219.0" promptText="*Email" />
          <VBox spacing="10.0">
             <HBox alignment="CENTER">
-               <Button id="resetPasswordButton" mnemonicParsing="false" onAction="#handleResetPasswordButton" prefHeight="40.0" prefWidth="219.0" text="RESET" />
+               <Button id="nextButton" mnemonicParsing="false" onAction="#handleResetPasswordNextButton" prefHeight="40.0" prefWidth="219.0" text="Next &gt;" />
             </HBox>
             <HBox alignment="CENTER">
                <Label id="resetPasswordMsgLabel" fx:id="resetPasswordMsgLabel" alignment="CENTER" prefHeight="50.0" prefWidth="219.0" textAlignment="CENTER" />
