minor updates to login controller and dbconnection

--- a/src/com/github/view/login.css
+++ b/src/com/github/view/login.css
@@ -51,6 +51,6 @@
     -fx-text-fill: #4E4E4F;
 }
 
-#specialAccountDetails {
+#specialAccountDetails, #passwordDetailsLabel {
     -fx-font-size: 10;
 }
