--- a/src/com/github/view/stage2.fxml
+++ b/src/com/github/view/stage2.fxml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Stage2Controller">
-   <columnConstraints>
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-   </rowConstraints>
+<?import javafx.scene.layout.AnchorPane?>
+<AnchorPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Stage2Controller">
    <children>
-      <Canvas fx:id="ctx_1" height="960.0" width="1120.0" />
+      <Canvas fx:id="ctx_1" height="960.0" width="1120.0">
+         <GridPane.margin>
+            <Insets />
+         </GridPane.margin></Canvas>
    </children>
-</GridPane>
+</AnchorPane>
