Revert "Add canvas in stage3, update stage2"
This reverts commit ed5d60b

--- a/src/com/github/view/stage2.fxml
+++ b/src/com/github/view/stage2.fxml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Stage2Controller">
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Stage2Controller">
+   <columnConstraints>
+      <ColumnConstraints />
+   </columnConstraints>
+   <rowConstraints>
+      <RowConstraints />
+   </rowConstraints>
    <children>
-      <Canvas fx:id="ctx_1" height="960.0" width="1120.0">
-         <GridPane.margin>
-            <Insets />
-         </GridPane.margin></Canvas>
+      <Canvas fx:id="ctx_1" height="960.0" width="1120.0" />
    </children>
-</AnchorPane>
+</GridPane>
