--- a/src/com/github/view/stage3.fxml
+++ b/src/com/github/view/stage3.fxml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import java.lang.*?>
+<?import java.util.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Stage3_Controller">
-   <children>
-      <Canvas fx:id="ctx" height="751.0" layoutX="29.0" layoutY="28.0" width="878.0" />
-      <Button fx:id="move" layoutX="109.0" layoutY="401.0" mnemonicParsing="false" onAction="#action" prefHeight="43.0" prefWidth="76.0" text="Button" />
-   </children>
+<AnchorPane xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
+            fx:controller="com.github.controller.Stage3_Controller"
+            prefHeight="400.0" prefWidth="600.0">
+
 </AnchorPane>
