--- a/src/com/github/view/login.fxml
+++ b/src/com/github/view/login.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="350.0" stylesheets="@login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.LoginController">
+<AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="350.0" stylesheets="@login.css" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.LoginController">
    <Pane id="loginPane" fx:id="loginPane" layoutX="7.0" layoutY="6.0" prefHeight="488.0" prefWidth="336.0">
       <Button id="exitLoginButton" fx:id="exitLoginButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitAppButton" prefHeight="24.0" prefWidth="24.0" />
       <VBox layoutX="59.0" layoutY="59.0" prefHeight="323.0" prefWidth="219.0" spacing="10.0">
@@ -50,16 +50,17 @@
    </Pane>
     <Pane id="passwordPane" fx:id="passwordPane" layoutX="7.0" layoutY="6.0" prefHeight="488.0" prefWidth="336.0" visible="false">
         <Button id="exitRegistrationButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitPasswordPaneButton" prefHeight="24.0" prefWidth="24.0" />
-        <VBox layoutX="59.0" layoutY="65.0" prefHeight="337.0" prefWidth="219.0" spacing="10.0">
+        <VBox layoutX="59.0" layoutY="65.0" prefHeight="383.0" prefWidth="219.0" spacing="10.0">
             <HBox alignment="CENTER" prefHeight="54.0" prefWidth="219.0">
                 <Label id="newUserLabel" text="Choose a password" />
             </HBox>
-            <PasswordField prefHeight="40.0" prefWidth="219.0" promptText="*Confirmation Code" />
-            <PasswordField prefHeight="40.0" prefWidth="219.0" promptText="*Password" />
-            <PasswordField prefHeight="40.0" prefWidth="219.0" promptText="*Confirm Password" />
-            <Button id="finishButton" mnemonicParsing="false" prefHeight="40.0" prefWidth="219.0" text="FINISH" />
+            <TextField fx:id="tfAccountPass" prefHeight="40.0" prefWidth="219.0" promptText="*Account ID" />
+            <PasswordField fx:id="pfConfirmationCode" prefHeight="40.0" prefWidth="219.0" promptText="*Confirmation Code" />
+            <PasswordField fx:id="pfPasswordPass" prefHeight="40.0" prefWidth="219.0" promptText="*Password" />
+            <PasswordField fx:id="pfPasswordConfirm" prefHeight="40.0" prefWidth="219.0" promptText="*Confirm Password" />
+            <Button id="finishButton" onAction="#handleFinishButtonPressed" mnemonicParsing="false" prefHeight="40.0" prefWidth="219.0" text="FINISH" />
             <HBox alignment="CENTER" centerShape="false">
-                <Label id="passwordDetailsLabel" fx:id="passwordDetailsLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="56.0" prefWidth="219.0" textAlignment="CENTER" wrapText="true" />
+                <Label id="passwordDetailsLabel" fx:id="passwordDetailsLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="77.0" prefWidth="219.0" textAlignment="CENTER" wrapText="true" />
             </HBox>
         </VBox>
     </Pane>
