--- a/src/com/github/view/login.fxml
+++ b/src/com/github/view/login.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -12,9 +14,14 @@
 <AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="350.0" stylesheets="@login.css" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.LoginController">
    <Pane id="loginPane" fx:id="loginPane" layoutX="7.0" layoutY="6.0" prefHeight="488.0" prefWidth="336.0">
       <Button id="exitLoginButton" fx:id="exitLoginButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitAppButton" prefHeight="24.0" prefWidth="24.0" />
-      <VBox layoutX="59.0" layoutY="59.0" prefHeight="323.0" prefWidth="219.0" spacing="10.0">
+      <VBox layoutX="59.0" layoutY="83.0" prefHeight="323.0" prefWidth="219.0" spacing="10.0">
          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="219.0">
-            <Label id="loginLabel" text="Jala Trafiken" />
+            <children>
+               <ImageView fx:id="ivLogo" fitHeight="93.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                     <Image url="@../../../resources/img/logo.png" />
+                  </image></ImageView>
+            </children>
          </HBox>
          <TextField id="usernameField" fx:id="tfAccountLogin" prefHeight="40.0" prefWidth="219.0" promptText="Username" />
          <PasswordField id="passwordField" fx:id="pfPasswordLogin" prefHeight="40.0" prefWidth="219.0" promptText="Password" />
@@ -58,7 +65,7 @@
             <PasswordField fx:id="pfConfirmationCode" prefHeight="40.0" prefWidth="219.0" promptText="*Confirmation Code" />
             <PasswordField fx:id="pfPasswordPass" prefHeight="40.0" prefWidth="219.0" promptText="*Password" />
             <PasswordField fx:id="pfPasswordConfirm" prefHeight="40.0" prefWidth="219.0" promptText="*Confirm Password" />
-            <Button id="finishButton" onAction="#handleFinishButtonPressed" mnemonicParsing="false" prefHeight="40.0" prefWidth="219.0" text="FINISH" />
+            <Button id="finishButton" mnemonicParsing="false" onAction="#handleFinishButtonPressed" prefHeight="40.0" prefWidth="219.0" text="FINISH" />
             <HBox alignment="CENTER" centerShape="false">
                 <Label id="passwordDetailsLabel" fx:id="passwordDetailsLabel" alignment="CENTER" contentDisplay="CENTER" prefHeight="77.0" prefWidth="219.0" textAlignment="CENTER" wrapText="true" />
             </HBox>
