--- a/src/com/github/view/login.fxml
+++ b/src/com/github/view/login.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <AnchorPane id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="350.0" stylesheets="@login.css" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.LoginController">
-   <Pane id="loginPane" fx:id="loginPane" layoutX="7.0" layoutY="6.0" prefHeight="488.0" prefWidth="336.0" visible="false">
+   <Pane id="loginPane" fx:id="loginPane" layoutX="7.0" layoutY="6.0" prefHeight="488.0" prefWidth="336.0">
       <Button id="exitLoginButton" fx:id="exitLoginButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitAppButton" prefHeight="24.0" prefWidth="24.0" />
       <VBox layoutX="59.0" layoutY="83.0" prefHeight="323.0" prefWidth="219.0" spacing="10.0">
          <HBox alignment="CENTER" prefHeight="100.0" prefWidth="219.0">
@@ -38,7 +38,7 @@
          </VBox>
       </VBox>
    </Pane>
-   <Pane id="registrationPane" fx:id="registrationPane" layoutX="7.0" layoutY="6.0" prefHeight="488.0" prefWidth="336.0">
+   <Pane id="registrationPane" fx:id="registrationPane" layoutX="7.0" layoutY="6.0" prefHeight="488.0" prefWidth="336.0" visible="false">
       <Button id="exitRegistrationButton" layoutX="298.0" layoutY="14.0" mnemonicParsing="false" onAction="#handleExitRegistrationButton" prefHeight="24.0" prefWidth="24.0" />
       <VBox layoutX="59.0" layoutY="65.0" prefHeight="374.0" prefWidth="219.0" spacing="10.0">
          <HBox alignment="CENTER" prefHeight="54.0" prefWidth="219.0">
