--- a/src/com/github/view/stage1.fxml
+++ b/src/com/github/view/stage1.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<GridPane alignment="center" hgap="10" prefHeight="523.0" prefWidth="300.0" vgap="10" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Stage1Controller">
+<GridPane alignment="center" hgap="10" prefHeight="523.0" prefWidth="300.0" vgap="10" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Stage1Controller">
    <columnConstraints>
       <ColumnConstraints />
    </columnConstraints>
@@ -15,11 +15,13 @@
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints minHeight="10.0" prefHeight="30.0" />
       <RowConstraints />
+      <RowConstraints />
    </rowConstraints>
    <children>
       <Button mnemonicParsing="false" onAction="#simulation" text="Simulation" GridPane.rowIndex="2" />
       <Button mnemonicParsing="false" onAction="#taxiInterface" text="Taxi Interface" GridPane.rowIndex="1" />
       <Button mnemonicParsing="false" onAction="#stage_3" text="stage3" GridPane.rowIndex="3" />
       <Label prefHeight="30.0" prefWidth="229.0" text="Temporary stage for all other stages" />
+      <Button layoutX="46.0" layoutY="319.0" mnemonicParsing="false" onAction="#userGUI" text="UserGUI" GridPane.rowIndex="4" />
    </children>
 </GridPane>
