--- a/src/com/github/view/stage3.fxml
+++ b/src/com/github/view/stage3.fxml
@@ -5,10 +5,11 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Stage3_Controller">
+<AnchorPane prefHeight="650.0" prefWidth="1063.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Stage3_Controller">
    <children>
-      <Canvas fx:id="ctx" height="563.0" layoutX="95.0" layoutY="20.0" width="684.0" />
+      <Canvas fx:id="ctx" height="610.0" layoutX="130.0" layoutY="20.0" width="870.0" />
       <Button fx:id="move" layoutX="14.0" layoutY="88.0" mnemonicParsing="false" onAction="#action" prefHeight="43.0" prefWidth="76.0" text="Button" />
+      <Button layoutX="14.0" layoutY="147.0" mnemonicParsing="false" onAction="#replaceBackground" prefHeight="43.0" prefWidth="76.0" text="ZoomIn" />
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
