--- a/src/com/github/view/stage1.fxml
+++ b/src/com/github/view/stage1.fxml
@@ -12,7 +12,7 @@
 <GridPane stylesheets="@style.css" alignment="center" hgap="10" prefHeight="230.0" prefWidth="129.0" vgap="10"
           xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1"
           fx:controller="com.github.controller.Stage1Controller">
->>>>>>> login_dev
+<!--&gt;>>>>>> login_dev-->
    <columnConstraints>
       <ColumnConstraints/>
    </columnConstraints>
@@ -27,9 +27,9 @@
    <children>
       <Button mnemonicParsing="false" onAction="#simulation" text="Simulation" GridPane.rowIndex="2" />
       <Button mnemonicParsing="false" onAction="#taxiInterface" text="Taxi Interface" GridPane.rowIndex="1" />
-      <Button mnemonicParsing="false" onAction="#stage_3" text="stage3" GridPane.rowIndex="3" />
+      <!--<Button mnemonicParsing="false" onAction="#stage_3" text="stage3" GridPane.rowIndex="3" />-->
       <Label prefHeight="30.0" prefWidth="229.0" text="Temporary stage for all other stages" />
-      <Button layoutX="46.0" layoutY="319.0" mnemonicParsing="false" onAction="#userGUI" text="UserGUI" GridPane.rowIndex="4" />
+      <!--<Button layoutX="46.0" layoutY="319.0" mnemonicParsing="false" onAction="#userGUI" text="UserGUI" GridPane.rowIndex="4" />-->
    </children>
 <!--=======-->
       <!--<RowConstraints minHeight="10.0" prefHeight="30.0"/>-->
