--- a/src/com/github/view/simulation.fxml
+++ b/src/com/github/view/simulation.fxml
@@ -13,19 +13,28 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="513.0" prefWidth="960.0">
                      <children>
-                        <Canvas fx:id="ctx_1" height="640.0" width="960.0" />
+                        <Canvas fx:id="canvas_Station_0" height="640.0" width="960.0" />
+                        <Canvas fx:id="canvas_Station_1" height="640.0" width="960.0" />
                      </children>
                   </AnchorPane>
             </content>
           </Tab>
           <Tab text="CrownLand City">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Canvas fx:id="canvas_City_0" height="640.0" width="960.0" />
+                        <Canvas fx:id="canvas_City_1" height="640.0" width="960.0" />
+                     </children></AnchorPane>
             </content>
           </Tab>
             <Tab text="Westeros Region">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Canvas fx:id="canvas_Region_0" height="640.0" width="960.0" />
+                        <Canvas fx:id="canvas_Region_1" height="640.0" width="960.0" />
+                     </children></AnchorPane>
                </content>
             </Tab>
         </tabs>
