--- a/src/com/github/view/adminScreen.fxml
+++ b/src/com/github/view/adminScreen.fxml
@@ -148,5 +148,5 @@
        <fx:include source="viewProfile.fxml" />
      </tabs>
    </TabPane>
-   <Button id="exitLoginButton" fx:id="signoutButton" layoutX="522.0" layoutY="1.5" mnemonicParsing="false" onAction="#handleSignoutButtonPressed" prefHeight="24.0" prefWidth="24.0" />
+   <Button id="exitLoginButton" fx:id="signOutButton" layoutX="522.0" layoutY="1.5" mnemonicParsing="false" onAction="#handleSignoutButtonPressed" prefHeight="24.0" prefWidth="24.0" />
 </AnchorPane>
