--- a/src/com/github/view/simulation.fxml
+++ b/src/com/github/view/simulation.fxml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.canvas.Canvas?>
 <AnchorPane prefHeight="640.0" prefWidth="960.0" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.Simulation">
    <children>
       <TabPane prefHeight="640.0" prefWidth="960.0" tabClosingPolicy="UNAVAILABLE">
@@ -40,4 +41,5 @@
         </tabs>
       </TabPane>
    </children>
+    <Button id="exitLoginButton" fx:id="signOutButton" layoutX="934.0" layoutY="1.0" mnemonicParsing="false" prefHeight="24.0" prefWidth="24.0" />
 </AnchorPane>
