--- a/src/com/github/view/splashScreen.fxml
+++ b/src/com/github/view/splashScreen.fxml
@@ -5,13 +5,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="root" fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: BLACK;" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.SplashScreenController">
+<AnchorPane id="westros" fx:id="rootPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="960.0" style="-fx-background-color: BLACK;" stylesheets="@../../../resources/style/login.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.github.controller.SplashScreenController">
    <children>
-      <ImageView fx:id="image" fitHeight="500.0" fitWidth="350.0" pickOnBounds="true">
-         <image>
-            <Image url="@../../../resources/img/splash.jpg" />
-         </image>
-      </ImageView>
-      <ProgressIndicator layoutX="151.0" layoutY="234.0" />
+      <ProgressIndicator layoutX="405.0" layoutY="245.0" prefHeight="150.0" prefWidth="150.0" style="-fx-progress-color: RGBA(128,0,0,255);" />
    </children>
 </AnchorPane>
